# STM32-smartLED

./: CMakeLists.txt  LICENSE  README.md  smartLED.c  smartLED.h
inc/: smartLED.h
src/: smartLED.c
